[gd_scene load_steps=3 format=3 uid="uid://bvstd33m3b20n"]

[ext_resource type="Script" path="res://Scripts/title_screen.gd" id="1_25hgy"]
[ext_resource type="PackedScene" uid="uid://b7d11oql0n28o" path="res://Scenes/jitter_test.tscn" id="2_wvet1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -575.0
offset_top = -323.0
offset_right = 576.0
offset_bottom = 323.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_25hgy")
next_scene = "res://Scenes/LevelSelectScreen.tscn"

[node name="TopContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_right = 300.0
offset_bottom = 222.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="TopContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="TopContainer"]
custom_minimum_size = Vector2(600, 150)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "
[center][font_size={40}]NIHONGO NO DENSHA
[center][font_size={20}]にほんご の でんしゃ"
tab_size = 5

[node name="ButtonContainer" type="VBoxContainer" parent="TopContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Play" type="Button" parent="TopContainer/ButtonContainer"]
layout_mode = 2
text = "Play"

[node name="TogMusic" type="Button" parent="TopContainer/ButtonContainer"]
layout_mode = 2
text = "Toggle Music"

[node name="Exit" type="Button" parent="TopContainer/ButtonContainer"]
layout_mode = 2
text = "Exit to Desktop"

[node name="MarginContainer2" type="MarginContainer" parent="TopContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="TopContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
bbcode_enabled = true
text = "[center] Alpha Build 1.8.2"

[node name="Node2D" parent="." instance=ExtResource("2_wvet1")]
position = Vector2(13, 177)
scale = Vector2(1, 1)

[connection signal="pressed" from="TopContainer/ButtonContainer/Play" to="." method="_on_play_pressed"]
[connection signal="button_up" from="TopContainer/ButtonContainer/TogMusic" to="." method="_on_tog_music_button_up"]
[connection signal="pressed" from="TopContainer/ButtonContainer/Exit" to="." method="_on_exit_pressed"]
